# os

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  config.sh
cross-compiler/: .gitignore  CMakeLists.txt  README.md
cross_compiler/: README.md  build.sh  config.sh
kernel/arch/i386/: boot.s  kernel.cpp
scripts/: build-and-install.sh  common.sh  iso.sh  qemu-debug.sh  qemu.sh
src/cross_compiler/: CMakeLists.txt  Makefile
src/grub/: grub.cfg
src/iso/: Makefile
src/kernel/: CMakeLists.txt  Makefile  kernel.c  kernel.cpp
src/kernel/arch/i386/: bios.s  boot.s  linker.ld  pmm.c  terminal.c  terminal.cpp  tty.cpp  vga.c  vga.cpp  vga.h
src/kernel/i386/: boot.s
src/kernel/include/kernel/: kernel.h  pmm.h  terminal.h  tty.h
src/libc/: CMakeLists.txt  Makefile
src/libc/arch/i386/: flags.cmake
src/libc/include/: stdio.h  stdlib.h  string.h
src/libc/stdio/: printf.c  putchar.c  puts.c
src/libc/stdlib/: abort.c
src/libc/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strlen.c
src/qemu/: Makefile
sysroot/boot/: myos.kernel
toolchain/: main.sh  toolchain.cmake
